fix spacing

--- a/src/main/resources/src/app/people/main/main.component.css
+++ b/src/main/resources/src/app/people/main/main.component.css
@@ -4,6 +4,6 @@
 
 .subtitle {
     position: absolute;
-    top: 2em;
-    right: 2em;
+    top: 1rem;
+    right: .5em;
 }
